Adiciona melhorias e refatorações em comandos e utilitários
- Implementa a classe RelogioSistema para centralizar a obtenção de data/hora com suporte a timezone configurável.
- Refatora o registro de comandos no CommandRegistry para suportar a extensão via SPI.
- Atualiza diversos comandos para utilizar a nova classe RelogioSistema.
- Melhora a gestão de configurações no CarregadorConfig para suportar aliases de variáveis de ambiente.
- Adiciona métodos de requisição HTTP estritos no GerenciadorRequisicaoHttp para melhor controle de status.
- Documenta classes e métodos com comentários detalhados para melhor entendimento do fluxo e estrutura.